wp-content/themes/sydneytheme/src/sass/pdf-block.scss
.sv-pdf {
    &__wrapper {
        max-width: $site-width;
        margin: 0 auto;
        padding: 60px 30px;

        @include breakpoint(laptop) {
            padding: 200px 80px 160px 80px;
            display: flex;
            justify-content: space-between;
        }

        @include breakpoint(largedesktop) {
            padding: 200px 80px 160px 180px;
        }

        .subtitle {
            font-size: em(14);

            @include breakpoint(tablet) {
                font-size: em(18);
            }

            &.subtitle::after {
                margin-left: 10px;
                top: 6px;

                @include breakpoint(tablet) {
                    margin-left: 20px;
                    top: 8px;
                }
            }
        }
    }

    &__heading {
        font-weight: normal;
        padding: 15px 0;
    }

    &__icon {
        max-width: 150px;
        margin: 30px 0;
    }

    &__link {
        color: $font-color;
        font-family: $primary-font-family;
        font-size: em(16);
        line-height: 1.6;
        font-weight: 300;
        text-decoration: none;
        display: block;
        border-bottom: 1.5px solid $font-color;
        padding: 25px 0 5px;

        @include breakpoint(smalldesktop) {
            font-size: em(18);
        }
    
        @include breakpoint(desktop) {
            font-size: 20px;
        }
    
        @include breakpoint(largedesktop) {
            font-size: 24px;
        }

        &:hover,
        &:focus {
            color: $primary-color;
            border-bottom: 1.5px solid $primary-color;
        }

        &--icon {
            height: 16px;
            width: 10px;
            top: 8px;
            position: relative;
            right: 8px;
            float: right;

            @include breakpoint(desktop) {
                height: 21px;
                width: 15px;
            }
        }
    }

    // style accordion

    &__left-box {
        max-width: 472px;
        min-width: 270px;

        @include breakpoint(tablet) {
            max-width: 285px;
        }

        @include breakpoint(smalldesktop) {
            max-width: 472px;
            min-width: 370px;
        }
    }

    &__accordion-btn {
        transition: 0.4s;
        font-size: 18px;
        font-family: $primary-font-family;
        color: $primary-color;
        background: none;
        border: none;
        margin-top: 60px;
        padding-bottom: 20px;
        border-bottom: 1.5px solid $primary-color;
        width: 100%;
        text-align: left;
        cursor: pointer;
        position: relative;

        @include breakpoint(tablet) {
            font-size: em(18);
        }

        @include breakpoint(smalldesktop) {
            font-size: 22px;
            padding-bottom: 25px;
        }
    
        @include breakpoint(desktop) {
            font-size: 24px;
        }
    
        @include breakpoint(largedesktop) {
            font-size: 28px;
        }  

        &:after {
            /* "plus" sign (+) */
            content: " ";
            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='22' height='23' viewBox='0 0 22 23'%3E%3Ctitle%3Eplus%3C/title%3E%3Cg%3E%3Cg id='Product' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' font-family='Roboto-Regular, Roboto' font-size='42' font-weight='normal' letter-spacing='2.079'%3E%3Cg id='Sydney_the-Product_V3' transform='translate(-718 -1532)' fill='%23EA0029'%3E%3Cg id='Download_accordion' transform='translate(264 1518)'%3E%3Ctext id='+'%3E%3Ctspan x='453' y='39'%3E+%3C/tspan%3E%3C/text%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
            width: 14px;
            height: 15px;
            position: absolute;
            top: 3px;
            right: 30px;
            background-repeat: no-repeat;
            background-size: contain;

            @include breakpoint(smalldesktop) {
                width: 16px;
                height: 17px;
            }

            @include breakpoint(desktop) {
                width: 22px;
                height: 23px;
            }
        }

        &.active:after {
            /* "minus" sign (-) */
            content: " ";
            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='29' height='3' viewBox='0 0 29 3'%3E%3Ctitle%3Eminus%3C/title%3E%3Cg%3E%3Cg id='Product' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Sydney_the-Product_Downloads' transform='translate(-725 -1545)' fill='%23EA0029'%3E%3Cg id='Download_accordion' transform='translate(264 1526)'%3E%3Cpath id='Rectangle-3' d='M461 19h29v3h-29z'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
            width: 20px;
            height: 3px;
            position: absolute;
            top: 10px;
            right: 30px;
            background-repeat: no-repeat;

            @include breakpoint(desktop) {
                width: 29px;
                height: 3px;
                top: 14px;
                right: 30px;
            }
        }
    }

    &__accordion-content {
        max-height: 0;
        overflow: hidden;
        transition: max-height 0.2s ease-out;
    }

    &__accordion-inner {
        margin-top: 35px;
        border: 1px solid $primary-color;
        padding: 20px 30px 50px 30px;

        @include breakpoint(smalldesktop) {
            padding: 35px 30px 70px 30px;
        }
    }

    // style image gallery 

    &__right-box {
        max-width: 472px;
        width: 100%;

        @include breakpoint(laptop) {
            max-width: 672px;
            padding-left: 80px;
        }
    }

    &__gallery-container {
        margin-top: 30px;
        border: 1px solid $tertiary-color;

        @include breakpoint(laptop) {
            margin-top: 0;
        }

        &--image {
            width: 100%;
        }
    }

    &__gallery-row {
        margin-top: 20px;
        display: flex;

        @include breakpoint(smalldesktop) {
            margin-top: 30px;
        }
    }

    &__gallery-column {
        margin-right: 12px;

        @include breakpoint(laptop) {
            margin-right: 20px;
        }

        @include breakpoint(smalldesktop) {
            margin-right: 30px;
        }

        &:last-child {
            margin-right: 0;
        }
    }

    &__gallery-column &__gallery-image {
        width: 100%;
        // incase there is ever only one thumbnail stop it from being same 100% width of main image
        max-width: 321px;
        height: 100%;
        cursor: pointer;
    }

    &__gallery-image {
        width: 100%;
        border: 1px solid $tertiary-color;
    }
}

